# ferryman

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.githooks/: pre-commit  pre-push
.github/workflows/: security.yml
backend/: ferryman_backend.spec  requirements.txt
backend/app/: main.py  release_smoke.py
backend/tests/: conftest.py  test_agent_closure.py  test_agent_event_stream.py  test_agent_manager.py  test_browser_manager.py  test_browser_runtime.py  test_config.py  test_context_manager.py  test_db.py  test_email_toolkit.py  test_image_toolkit.py  test_kernel.py  test_kernel_execution.py  test_kernel_skills.py  test_live_ai_hotspot_skill.py  test_model_manager.py  test_model_pricing.py  test_model_routing.py  test_models.py  test_models_and_config.py  test_pydanticai.py  test_release_bundle_scripts.py  test_runtime_architecture.py  test_runtime_composition.py  test_scheduler.py  test_session_manager.py  test_skill_manager.py  test_task_manager.py  test_task_toolkit.py  test_tool_manager.py  test_utils.py  test_web_toolkit.py  test_websocket.py
frontend/: .env.release.example  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: build_macos_dmg.sh  stage_backend_bundle.py  sync_version.py  verify_release_bundle.py
frontend/src/: App.test.tsx  App.tsx  (+1 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/entitlements/: playwright-node.plist
frontend/src-tauri/src/: lib.rs
scripts/: probe_model_pricing.py
(+116 files in other folders)
