[package]
name = "frontend"
version = "0.2.2"
description = "A Tauri App"
authors = ["Beijing Huishuo Mobile Technology Co., Ltd."]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.36"
